; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_lpar.c_udbg_getcLP.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_lpar.c_udbg_getcLP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @udbg_getcLP to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udbg_getcLP() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  br label %3

3:                                                ; preds = %18, %0
  %4 = call i32 (...) @udbg_getc_pollLP()
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = icmp eq i32 %5, -1
  br i1 %6, label %7, label %16

7:                                                ; preds = %3
  store volatile i64 0, i64* %2, align 8
  br label %8

8:                                                ; preds = %12, %7
  %9 = load volatile i64, i64* %2, align 8
  %10 = icmp ult i64 %9, 2000000
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  br label %12

12:                                               ; preds = %11
  %13 = load volatile i64, i64* %2, align 8
  %14 = add i64 %13, 1
  store volatile i64 %14, i64* %2, align 8
  br label %8

15:                                               ; preds = %8
  br label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %1, align 4
  ret i32 %17

18:                                               ; preds = %15
  br label %3
}

declare dso_local i32 @udbg_getc_pollLP(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
